force-app/main/default/objects/ADM_Team_Dependency__c/fields/Associated_with_Program__c.field-meta.xml
<CustomField>
    <fullName>Associated_with_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated with Program</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Team Dependencies (Associated with Program)</relationshipLabel>
    <relationshipName>Associated_Team_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>