force-app/main/default/objects/ADM_Team_Dependency__c/fields/Deliver_By__c.field-meta.xml
<CustomField>
    <fullName>Deliver_By__c</fullName>
    <inlineHelpText>If the deliverable is needed by a specific date, indicate that in this field.</inlineHelpText>
    <label>Needed by (date)</label>
    <type>Date</type>
</CustomField>