force-app/main/default/objects/ADM_Team_Dependency__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <description>Short description of the work that is needed from the other team.</description>
    <inlineHelpText>Short description (255 chars max) of the work that is needed from the other team. More detailed description can be added to the Notes field.</inlineHelpText>
    <label>Deliverable</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>