force-app/main/default/objects/ADM_Team_Dependency__c/fields/Dependency_Size__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Size__c</fullName>
    <inlineHelpText>- Small: requires up to 1 sprint to complete work by 1 resource ^M
- Medium: requires 1 month to complete work by 1-2 resources ^M
- Large: requires 1 release to complete work by &gt; 2 resources</inlineHelpText>
    <label>Dependency Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>