force-app/main/default/objects/ADM_Team_Dependency__c/fields/Dependency_Status__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Status__c</fullName>
    <inlineHelpText>The status of this dependency.

Prioritized = Deliverable has a user story and is prioritized on the backlog.

Committed = Team is confident the work can be done in the needed timeframe and PO committed to maintaining the priority of the deliverable.</inlineHelpText>
    <label>Dependency Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>More Info Needed</fullName>
            </value>
            <value>
                <fullName>Prioritized</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>