force-app/main/default/objects/ADM_Team_Dependency__c/fields/Dependent_Team__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team that is dependent on another team to provide the deliverable.</description>
    <inlineHelpText>The team that is dependent on another team to provide the deliverable.</inlineHelpText>
    <label>Team With Dependency</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Team With Dependency you selected is not active.</errorMessage>
        <filterItems>
            <field>ADM_Scrum_Team__c.Active__c</field>
            <operation>notEqual</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Dependencies we have on other teams</relationshipLabel>
    <relationshipName>Our_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>