force-app/main/default/objects/ADM_Team_Dependency__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Epic</label>
    <referenceTo>ADM_Epic__c</referenceTo>
    <relationshipLabel>Team Dependencies</relationshipLabel>
    <relationshipName>Team_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>