force-app/main/default/objects/ADM_Team_Dependency__c/fields/Provider_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Provider_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The record representing the work to satisfy the deliverable of this dependency.</description>
    <inlineHelpText>The record representing the work to satisfy the deliverable of this dependency.</inlineHelpText>
    <label>Work For Deliverable</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Team Dependencies on this work</relationshipLabel>
    <relationshipName>Team_Dependencies_On_Story</relationshipName>
    <type>Lookup</type>
</CustomField>