force-app/main/default/objects/ADM_Team_Dependency__c/fields/User_Story_Position_on_Backlog__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Position_on_Backlog__c</fullName>
    <formula>Provider_User_Story__r.Priority_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The position of the work on the backlog of the team doing the work.</inlineHelpText>
    <label>Work Position on Backlog</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>