force-app/main/default/objects/ADM_Team_Dependency__c/fields/User_Story_Scheduled_Release__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Scheduled_Release__c</fullName>
    <formula>NULLVALUE( Provider_User_Story__r.Scheduled_Build__r.Name,&quot;Not Scheduled&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The build in which the work is scheduled to be completed.</inlineHelpText>
    <label>Work Scheduled Build</label>
    <type>Text</type>
</CustomField>