force-app/main/default/objects/ADM_Team_Dependency__c/fields/User_Story_Scheduled_Sprint__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Scheduled_Sprint__c</fullName>
    <formula>NULLVALUE(Provider_User_Story__r.Sprint__r.Name, &quot;Not Scheduled&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sprint in which the work is scheduled to be completed.</inlineHelpText>
    <label>Work Scheduled Sprint</label>
    <type>Text</type>
</CustomField>