force-app/main/default/objects/ADM_Team_Dependency__c/validationRules/Dependent_Team_Is_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Dependent_Team_Is_Active</fullName>
    <active>true</active>
    <errorConditionFormula>Dependent_Team__r.Active__c = false</errorConditionFormula>
    <errorDisplayField>Dependent_Team__c</errorDisplayField>
    <errorMessage>The Team With Dependency you selected is not active.</errorMessage>
</ValidationRule>