force-app/main/default/objects/ADM_Team_Dependency__c/validationRules/Needed_By_Date_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Needed_By_Date_in_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Deliver_By__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Deliver_By__c</errorDisplayField>
    <errorMessage>The &#39;Needed By&#39; date cannot be in the past.</errorMessage>
</ValidationRule>