force-app/main/default/objects/ADM_Team_Dependency__c/validationRules/Provider_Team_Is_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Provider_Team_Is_Active</fullName>
    <active>true</active>
    <errorConditionFormula>Provider_Team__r.Active__c = false</errorConditionFormula>
    <errorDisplayField>Provider_Team__c</errorDisplayField>
    <errorMessage>The Team Providing Deliverable you selected is not active.</errorMessage>
</ValidationRule>