force-app/main/default/objects/ADM_Team_Dependency__c/validationRules/Teams_Cannot_Be_The_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Teams_Cannot_Be_The_Same</fullName>
    <active>true</active>
    <errorConditionFormula>Provider_Team__c = Dependent_Team__c</errorConditionFormula>
    <errorMessage>Team Providing Deliverable and Team With Dependency cannot be the same!</errorMessage>
</ValidationRule>