force-app/main/default/objects/ADM_Team_Dependency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Dependent_Team__c</columns>
    <columns>Provider_Team__c</columns>
    <columns>Deliverable__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>