force-app/main/default/objects/ADM_Team_Dependency__c/listViews/CSS_UI_Dependencies.listView-meta.xml
<ListView>
    <fullName>CSS_UI_Dependencies</fullName>
    <columns>Deliverable__c</columns>
    <columns>NAME</columns>
    <columns>Provider_Team__c</columns>
    <columns>Dependency_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dependent_Team__c</field>
        <operation>equals</operation>
        <value>CSS UI</value>
    </filters>
    <label>CSS UI Dependencies</label>
</ListView>