force-app/main/default/objects/ADM_Team_Dependency__c/listViews/Oppty2Quote_Dependencies.listView-meta.xml
<ListView>
    <fullName>Oppty2Quote_Dependencies</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Dependency_Status__c</columns>
    <columns>Dependent_Team__c</columns>
    <columns>Provider_Team__c</columns>
    <columns>Deliverable__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dependent_Team__c</field>
        <operation>equals</operation>
        <value>Opportunity to Quote</value>
    </filters>
    <filters>
        <field>Provider_Team__c</field>
        <operation>equals</operation>
        <value>Opportunity to Quote</value>
    </filters>
    <label>Oppty2Quote Dependencies</label>
</ListView>