force-app/main/default/objects/ADM_Team_Dependency__c/listViews/SFA_UI_Dependencies_on_other_Teams.listView-meta.xml
<ListView>
    <fullName>SFA_UI_Dependencies_on_other_Teams</fullName>
    <columns>NAME</columns>
    <columns>Deliverable__c</columns>
    <columns>Notes__c</columns>
    <columns>Deliver_By__c</columns>
    <columns>Provider_Team__c</columns>
    <columns>Dependent_User_Story__c</columns>
    <columns>Provider_User_Story__c</columns>
    <columns>Dependency_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dependent_Team__c</field>
        <operation>equals</operation>
        <value>SFA UI</value>
    </filters>
    <label>162 SFA UI Dependencies Needed</label>
</ListView>