force-app/main/default/objects/ADM_Team_Dependency__c/listViews/X160_Team_Dependencies.listView-meta.xml
<ListView>
    <fullName>X160_Team_Dependencies</fullName>
    <columns>NAME</columns>
    <columns>Deliverable__c</columns>
    <columns>Dependency_Status__c</columns>
    <columns>Deliver_By__c</columns>
    <columns>Provider_Team__c</columns>
    <columns>Dependent_Team__c</columns>
    <columns>Provider_User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <label>160 Team Dependencies</label>
</ListView>