force-app/main/default/objects/ADM_Team_Dependency__c/listViews/X162_Core_Team_Dependencies.listView-meta.xml
<ListView>
    <fullName>X162_Core_Team_Dependencies</fullName>
    <columns>NAME</columns>
    <columns>Dependent_Team__c</columns>
    <columns>Deliverable__c</columns>
    <columns>Deliver_By__c</columns>
    <columns>Provider_Team__c</columns>
    <columns>Provider_User_Story__c</columns>
    <columns>Dependency_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Dependent_Team__c</field>
        <operation>equals</operation>
        <value>Core Infrastructure</value>
    </filters>
    <label>162 Core Team Dependencies</label>
</ListView>